fix page margins on mobile screen

--- a/styles/Protected.module.css
+++ b/styles/Protected.module.css
@@ -11,3 +11,9 @@
   margin: 1.25rem 1.25rem 7rem;
   min-height: 25rem;
 }
+
+@media (width < 700px) {
+  .card {
+    margin: 1.25rem 1.25rem 3rem;
+  }
+}
